--- a/_posts/2020-05-31-开发环境配置记录.md
+++ b/_posts/2020-05-31-开发环境配置记录.md
@@ -4,7 +4,7 @@ title:      开发环境配置记录 				# 标题
 subtitle:   美国暴乱~ #副标题
 date:       2019-05-31 				# 时间
 author:     Tao					# 作者
-header-img: img/post-bg-swift1.jpg 	#这篇文章标题背景图片
+header-img: img/post-bg-swift.jpg 	#这篇文章标题背景图片
 catalog: true 						# 是否归档
 tags:								#标签
     - 系统配置
@@ -17,16 +17,33 @@ tags:								#标签
 2. nvidia-docker 用于处理各种系统依赖
 3. pytorch以及tensorflow
 
-### vscode编辑器配置 ###
+### vscode编辑器配置
+
+### git
+代码托管相关 包括gitlab和github等基于git的网站
+1. 账号配置
+```
+git config --global user.email rgwt1234@gmail.com
+git config --global user.name rgwt123
+```
+2. 公钥配置 
+```shell
+ssh-keygen -t rsa
+cat ~/.ssh/id_rsa.pub
+粘贴公钥到具体网站
+```
+
+#### git教程
+#### git使用经验
 
 ## MAC
-### 配置iterm ###
+### 配置iterm
 
 ## Windows
-### 配置windows terminal ###
-### xshell xftp下载 ##
+### 配置windows terminal
+### xshell xftp下载
 
 ## Ubuntu/Debian
-### 配置~/.bashrc ###
+### 配置~/.bashrc
 如何设置conda 代理等环境变量，快速切换。
 
