--- a/_posts/2019-04-28-Docker.md
+++ b/_posts/2019-04-28-Docker.md
@@ -20,6 +20,9 @@ tags:								#标签
 ## 安装
 可参考[这里]([https://mirrors.tuna.tsinghua.edu.cn/help/docker-ce/](https://mirrors.tuna.tsinghua.edu.cn/help/docker-ce/)
 )
+
+**需要注意nvidia-docker版本和cuda版本相关，cuda10往上最好安装nvidia-docker2.0往上的，便于对显卡进行管理。**
+
 ### Ubuntu安装
 **Docker 要求 Ubuntu 系统的内核版本高于 3.10**
 #### 有网络情况下安装
@@ -83,6 +86,9 @@ docker run -p 80:80 --name mynginx -v $PWD/www:/www -v $PWD/conf/nginx.conf:/etc
 -v $PWD/logs:/wwwlogs：将主机中当前目录下的logs挂载到容器的/wwwlogs
 -d 后台守护进程
 -i -t 交互式运行
+
+docker run -it image:tag env LANG=C.UTF-8 /bin/bash
+env LANG=C.UTF-8 #支持utf-8
 ```
 
 查看状态并交互
@@ -102,18 +108,27 @@ docker rmi # 删除镜像
 ```
 
 ## 如何打包并部署
-```
-docker pull ubuntu:16.04
-docker run -p 10000:10000 -p 80:80 -p 3000:3000 -p 8089:8089 --name mhn -t -i ubuntu:16.04 /bin/bash
+```shell
 安装好环境
 docker commit <容器ID> <镜像名称>
 docker save -o <save image to path> <image name>
-tar -Jcf /root/mhn.tar.xz /root/mhn # 可以不需要
-tar -Jxf /root/mhn.tar.xz # 可以不需要
-docker load -i /root/mhn
+使用zip或者tar打包压缩，传到另一个服务器
+docker load -i <save image to path>
 docker images
 ```
-TO BE TESTED!
+
+## 使用心得
+经过一段时间的实际使用，有一些心得，总结，持续更新~
+- docker需要一个后台程序作为pid=1的进程运行，否则就会退出。如果相当虚拟机使用，临时进去看一下，可以使用docker -itd命令，在后台启动bash作为pid=1的进程，然后docker exec -it进去操作；
+- 只要对数据有保存修改需求的，一律需要使用-v命令挂载到外部的目录或文件，包括配置文件，数据库，经常修改的代码等，方便修改，无需改动镜像；
+- ubuntu等镜像默认中文会有乱码，需要run的时候或者build镜像（ENV LANG C.UTF-8）的时候指定环境变量；
+
+## 好用的容器收藏
+
+## 自己常用的Dockerfile配置
+
+## K8S
+
 
 ## 一些参考网站
 [Docker常用环境配置](https://www.cnblogs.com/ywrj/p/9594869.html
