--- a/_posts/2019-04-28-Docker.md
+++ b/_posts/2019-04-28-Docker.md
@@ -89,6 +89,7 @@ docker run -p 80:80 --name mynginx -v $PWD/www:/www -v $PWD/conf/nginx.conf:/etc
 
 docker run -it image:tag env LANG=C.UTF-8 /bin/bash
 env LANG=C.UTF-8 #支持utf-8
+-e LANG=C.UTF-8
 ```
 
 查看状态并交互
