--- a/_posts/2020-05-31-开发环境配置记录.md
+++ b/_posts/2020-05-31-开发环境配置记录.md
@@ -38,6 +38,8 @@ cat ~/.ssh/id_rsa.pub
 
 ## MAC
 ### 配置iterm
+### macs fan control
+控制风扇转速，控制温度
 
 ## Windows
 ### 配置windows terminal
@@ -45,5 +47,30 @@ cat ~/.ssh/id_rsa.pub
 
 ## Ubuntu/Debian
 ### 配置~/.bashrc
-如何设置conda 代理等环境变量，快速切换。
+```shell
+alias grep='grep --color=auto'
+# export PATH="/home/wangtao.960826/miniconda3/bin:$PATH"
+
+# hadoop
+export tao="xxx"
+
+# conda
+function conda_on(){
+    export PATH="/data00/home/wangtao.960826/miniconda3/bin:$PATH"
+}
+
+function conda_off(){
+    export PATH="xxx"
+}
+
+# proxy
+function proxy_on(){
+    #export http_proxy=10.20.47.147:3128 https_proxy=10.20.47.147:3128 no_proxy=code.byted.org
+    export https_proxy=xxx http_proxy=xxx no_proxy=xxx
+}
+
+function proxy_off(){
+    unset http_proxy; unset https_proxy
+}
+```
 
