--- a/_posts/2020-05-31-python项目.md
+++ b/_posts/2020-05-31-python项目.md
@@ -1,6 +1,6 @@
 ---
 layout:     post			    # 使用的布局（不需要改）
-title:      python设计模式 				# 标题 
+title:      python项目 				# 标题 
 subtitle:   始于2020 05~ #副标题
 date:       2020-05-31				# 时间
 author:     Tao				# 作者
@@ -15,6 +15,51 @@ tags:								#标签
 总结一些平时觉得比较好的设计模式。
 
 ## 参考项目及网站
+
+## 项目标准
+- flake8 语法检查工具
+- isort 对import顺序检测修复
+- tox virtualenv 管理器和命令行测试工具
+- Makefile 快速执行命令
+- pytest 单元测试
+
+```shell
+'''
+standard/
+├── Makefile
+├── src
+│   ├── __init__.py
+│   └── simple.py
+├── tests
+│   ├── hello_test.py
+│   └── __init__.py
+└── tox.ini
+'''
+
+# Makefile
+SHELL = bash
+
+all: isort isort_check lint test
+
+isort:
+	@isort -s venv -s venv_py -s .tox -rc --atomic .
+
+isort_check:
+	@isort -rc -s venv -s venv_py -s .tox -c .
+
+lint:
+	@flake8
+
+test:
+	@tox
+
+clean:
+	@rm -rf .pytest_cache .tox bytedmypackage.egg-info
+	@rm -rf tests/*.pyc tests/__pycache__
+
+.IGNORE: install_dev
+.PHONY: all check isort isort_check lint test
+```
 
 ## 注册类
 类工厂模式。一个文件夹视作一个大类，内部包含一系列类似的类，在__init__.py文件中进行注册，通过python装饰器语法将被装饰的类注册到一个字典中，然后通过大类暴露出的统一的build函数，传入名字字符串参数，初始化不同的类。
