--- a/_posts/2020-05-25-Hadoop初探.md
+++ b/_posts/2020-05-25-Hadoop初探.md
@@ -130,5 +130,38 @@ if __name__ == "__main__" :
     funcReduce(sys.stdin)
 ```
 ## 高级用法
+### 打包程序
+conda新建环境，安装好依赖，本地用sort加上pipeline调试，确认无误后将环境的文件夹用tar打包为tgz格式文件。注意打包后里面的路径没有问题。
+
+### 中文分词
+```shell
+#Only the code base is uploaded from local.
+CODE_DIR=`pwd`
+
+CODEBASE_NAME=`basename ${CODE_DIR}`
+ENV=hdfs://xxx/hadoop-usage/jieba_split/fenci.tgz
+
+hadoop jar xx/lib/hadoop-streaming-2.6.0-cdh5.4.4.jar \
+-D mapreduce.job.name=fenci_xx \
+-D yarn.cluster.name=xx \
+-D mapreduce.job.queuename=xxx \
+-D mapreduce.job.reduces=0 \
+-files ../${CODEBASE_NAME} \
+-archives ${ENV} \
+-cmdenv LD_LIBRARY_PATH=fenci.tgz/lib:$LD_LIBRARY_PATH \
+-cmdenv PYTHONPATH=${CODEBASE_NAME}:$PYTHONPATH \
+-input ${tao}/hadoop_test/zh.txt \
+-output ${tao}/hadoop_test/output \
+-mapper "fenci.tgz/bin/python ${CODEBASE_NAME}/mapper.py"
+```
+```python
+import sys
+import jieba
+
+
+for line in sys.stdin:
+    line = ' '.join(jieba.cut(line.strip()))
+    sys.stdout.write(f'{line}\n')
+```
 
 ## 使用技巧心得
