--- a/_posts/2020-05-31-开发环境配置记录.md
+++ b/_posts/2020-05-31-开发环境配置记录.md
@@ -16,6 +16,7 @@ tags:								#标签
 1. miniconda3 [国内清华下载链接](https://mirror.tuna.tsinghua.edu.cn/help/anaconda/)
 2. nvidia-docker 用于处理各种系统依赖
 3. pytorch以及tensorflow
+4. pip源: https://pypi.tuna.tsinghua.edu.cn/simple
 
 ### vscode编辑器配置
 
@@ -42,10 +43,36 @@ cat ~/.ssh/id_rsa.pub
 控制风扇转速，控制温度
 
 ## Windows
-### 配置windows terminal
+### 配置Linux环境
+控制面板开启虚拟化（需要bios开启支持cpu虚拟化）
+windows商店windows terminal wsl1/2下载
+wsl支持各种windows命令，如code.exe explorer.exe
+
 ### xshell xftp下载
 
 ## Ubuntu/Debian
+### 配置apt源
+```shell
+# 默认注释了源码镜像以提高 apt update 速度，如有需要可自行取消注释
+deb https://mirrors.tuna.tsinghua.edu.cn/ubuntu/ xenial main restricted universe multiverse
+# deb-src https://mirrors.tuna.tsinghua.edu.cn/ubuntu/ xenial main restricted universe multiverse
+deb https://mirrors.tuna.tsinghua.edu.cn/ubuntu/ xenial-updates main restricted universe multiverse
+# deb-src https://mirrors.tuna.tsinghua.edu.cn/ubuntu/ xenial-updates main restricted universe multiverse
+deb https://mirrors.tuna.tsinghua.edu.cn/ubuntu/ xenial-backports main restricted universe multiverse
+# deb-src https://mirrors.tuna.tsinghua.edu.cn/ubuntu/ xenial-backports main restricted universe multiverse
+deb https://mirrors.tuna.tsinghua.edu.cn/ubuntu/ xenial-security main restricted universe multiverse
+# deb-src https://mirrors.tuna.tsinghua.edu.cn/ubuntu/ xenial-security main restricted universe multiverse
+
+# 预发布软件源，不建议启用
+# deb https://mirrors.tuna.tsinghua.edu.cn/ubuntu/ xenial-proposed main restricted universe multiverse
+# deb-src https://mirrors.tuna.tsinghua.edu.cn/ubuntu/ xenial-proposed main restricted universe multiverse
+
+14:trusty
+16:xenial
+18:bionic 
+20:focal
+```
+
 ### 配置~/.bashrc
 ```shell
 alias grep='grep --color=auto'
