--- a/_posts/2020-05-31-leetcode解题记录.md
+++ b/_posts/2020-05-31-leetcode解题记录.md
@@ -17,7 +17,7 @@ tags:								#标签
 
 搜索空间很大，定义D[i][j]为word1的前i个字符和word2的前j个字符的最短编辑距离。
 
-```python
+~~~python
 '''
 input:
 "horse"
@@ -57,7 +57,7 @@ class Solution:
                     D[i][j] = 1 + min(D[i-1][j], D[i][j-1], D[i-1][j-1])
                 
         return D[-1][-1]
-```
+~~~
 
 ### 双指针
 
