--- a/_posts/2020-05-31-leetcode解题记录.md
+++ b/_posts/2020-05-31-leetcode解题记录.md
@@ -243,28 +243,22 @@ int right_bound(int[] nums, int target) {
 最小覆盖子串 字符串排列 找到字符串中所有字母异位词 无重复字符的最长子串
 
 #### 关键点
-关键条件决定移动左边指针还是右边指针
+关键在于决定移动左边指针还是右边指针，这个条件需要写很多判断代码。
 
-
+滑动的窗口一般用哈希表字典，也可以用数组之类的。
 
 ```cpp
-string s, t;
-// 在 s 中寻找 t 的「最小覆盖子串」
 int left = 0, right = 0;
-string res = s;
-// 先移动 right 寻找可行解
-while(right < s.size()) {
+
+while (right < s.size()) {
     window.add(s[right]);
     right++;
-    // 找到可行解后，开始移动 left 缩小窗口
-    while (window 符合要求) {
-        // 如果这个窗口的子串更短，则更新结果
-        res = minLen(res, window);
+
+    while (valid) {
         window.remove(s[left]);
         left++;
     }
 }
-return res;
 ```
 
 ### 二叉树
