--- a/_posts/2020-05-31-leetcode解题记录.md
+++ b/_posts/2020-05-31-leetcode解题记录.md
@@ -87,6 +87,48 @@ class Solution:
 ```
 
 #### 股票买卖问题
+问题定义： 给定一个数组，第i个元素是一支股票在第i天的价格，最多可以完成k笔交易，计算最大利润。
+
+状态： 每天都可以买入，卖出，无 三种操作，设置table[i][j][0/1]，到第i天，最多交易j次，现在未持有/持有股票。
+
+```python
+    set dp[i][j][0/1]
+    无限次交易，j无所谓，可以不看
+
+    # 今天不持有，可能昨天还持有，但今天卖掉了；或者昨天也没有，今天啥都没干
+    dp[i][j][0] = max(dp[i-1][j][0], dp[i-1][j][1]+prices[i])
+
+    # 今天持有，可能昨天没有，今天买了；或者昨天有，今天啥都没干
+    dp[i][j][1] = max(dp[i-1][j-1][0]-prices[i], dp[i-1][j][1])
+
+    dp[i][0] = max(dp[i-1][0], dp[i-1][1]+prices[i])
+    dp[i][1] = max(dp[i-1][1], dp[i-1][0]-prices[i])
+```
+
+```python
+# 最大交易次数为2的情况
+if len(prices) == 0:
+    return 0
+dp = []
+for i in range(len(prices)):
+    dp.append([[0,0],[0,0],[0,0]])
+
+# base设置很重要，持有时利润为负值，这样计算第一天才能算对
+dp[0][0][0] = 0
+dp[0][0][1] = -prices[0]
+dp[0][1][0] = 0
+dp[0][1][1] = -prices[0]
+dp[0][2][0] = 0
+dp[0][2][1] = -prices[0]
+print(dp[0])
+for i in range(1, len(prices)):
+    for j in range(1,3):
+        dp[i][j][0] = max(dp[i-1][j][0], dp[i-1][j][1]+prices[i])
+        dp[i][j][1] = max(dp[i-1][j-1][0]-prices[i], dp[i-1][j][1])
+    # print(dp[i])
+
+return max(dp[-1][1][0], dp[-1][2][0])
+```
 
 
 ### 回溯算法
