--- a/_posts/2020-05-31-leetcode解题记录.md
+++ b/_posts/2020-05-31-leetcode解题记录.md
@@ -130,6 +130,55 @@ for i in range(1, len(prices)):
 return max(dp[-1][1][0], dp[-1][2][0])
 ```
 
+#### 打家劫舍问题
+问题定义：给定一个代表每个房屋存放金额的非负整数数组，计算你在不触动警报装置的情况下，能够偷窃到的最高金额。如果两间相邻的房屋在同一晚上被小偷闯入，系统会自动报警。
+
+增加考点：
+
+环形排列，需要分开考虑，选最大的。
+
+二叉树排列，使用递归+字典存储memory比较好弄，直接建立表格不太好弄。
+```python
+# Definition for a binary tree node.
+# class TreeNode:
+#     def __init__(self, x):
+#         self.val = x
+#         self.left = None
+#         self.right = None
+
+class Solution:
+    def rob(self, root: TreeNode) -> int:
+        '''
+        2-1,3-null-4 [2,4,4]->[]
+        '''
+        mem = {}
+
+        def search(node):
+            if node is None:
+                return 0  
+            if node in mem:
+                return mem[node]
+
+            if node.left is not None:
+                left = search(node.left.left) + search(node.left.right)
+            else:
+                left = 0
+            if node.right is not None:
+                right = search(node.right.left) + search(node.right.right)
+            else:
+                right = 0
+            
+            do = node.val + left + right
+            not_do = search(node.left) + search(node.right)
+
+            res = max(do, not_do)
+            mem[node] = res
+            return res
+        return search(root)
+```
+
+#### 背包问题
+
 
 ### 回溯算法
 #### 常见的题目类型：
@@ -306,3 +355,106 @@ while (right < s.size()) {
 ### 二叉树
 
 ### 图算法
+
+### LRU算法
+结合了哈希表和双向链表，可以同时保证查找和插入删除速度
+```python
+class Node:
+    def __init__(self, k, v):
+        self.key = k
+        self.value = v
+        self.nextn = None
+        self.prevn = None
+
+class DoubleList:
+    def __init__(self):
+        self.head = None
+        self.tail = None
+        self.length = 0
+
+    def size(self):
+        return self.length
+        
+
+    def addFirst(self, node):
+        if self.head is None:
+            self.head = node
+            self.tail = node
+            self.length += 1
+        else:
+            node.nextn = self.head
+            node.nextn.prevn = node
+            self.head = node
+            self.length += 1
+    
+    def removeLast(self):
+        temp = self.tail
+        if temp.prevn is None:
+            self.tail = None
+            self.length -= 1
+        else:
+            self.tail = temp.prevn
+            temp.prevn.nextn = None
+            self.length -= 1
+        return temp.key
+    
+    def remove(self, x):
+        temp = self.head
+            
+        while temp.key != x:
+            temp = temp.nextn
+        if temp.nextn is None:
+            nxt = None
+        else:
+            nxt = temp.nextn
+        if temp.prevn is None:
+            prv = None
+        else:
+            prv = temp.prevn
+        
+        if prv and nxt:
+            prv.nextn = nxt
+            nxt.prevn = prv
+        elif prv and not nxt:
+            prv.nextn = None
+            self.tail = prv
+        elif not prv and nxt:
+            nxt.prevn = None
+            self.head = nxt
+        else:
+            self.head = None
+            self.tail = None
+        self.length -= 1
+    
+
+
+class LRUCache:
+
+    def __init__(self, capacity: int):
+        self.capacity = capacity
+        self.dic = {}
+        self.cache = DoubleList()
+
+    def get(self, key: int) -> int:
+        if key not in self.dic:
+            return -1
+        else:
+            self.put(key, self.dic[key])
+            # print(key, self.dic[key])
+            return self.dic[key]
+            
+
+
+    def put(self, key: int, value: int) -> None:
+        x = Node(key, value)
+        if key in self.dic:
+            self.cache.remove(key)
+        else:
+            if self.cache.size() == self.capacity:
+                last = self.cache.removeLast()
+                self.dic.pop(last)
+
+        self.cache.addFirst(x)
+        self.dic[key] = value
+        # print(self.dic, self.cache.size())
+```
