--- a/_posts/2020-05-31-leetcode解题记录.md
+++ b/_posts/2020-05-31-leetcode解题记录.md
@@ -458,3 +458,99 @@ class LRUCache:
         self.dic[key] = value
         # print(self.dic, self.cache.size())
 ```
+
+### 字符串题
+字符串相关的考题相对比较多，利用动规、二叉查找的partition等思想来做，也有用DFS和BFS对特定字符串字典进行遍历的，网上还有人遇到一些链表的常见操作、二叉树的。
+
+#### 题目
+无重复字符的最长子串
+
+```python
+# 双指针滑动窗口+哈希表存储
+class Solution:
+    def lengthOfLongestSubstring(self, s: str) -> int:
+        store = {}
+        i, j = 0, 0
+        maxlen = 0
+        while j < len(s):
+            if s[j] not in store:
+                store[s[j]] = 0
+
+            if store[s[j]] == 0:
+                store[s[j]] += 1
+                j += 1
+                maxlen = max(maxlen, j-i)
+            else:
+                while i<=j and store[s[j]] > 0:
+                    store[s[i]] -= 1
+                    i += 1
+            
+        return maxlen
+```
+最长回文子串
+```python
+# 单层循环+向外扩展；注意奇偶
+class Solution:
+    def longestPalindrome(self, s: str) -> str:
+        def expand(i, j):
+            while i >= 0 and j <len(s) and s[i] == s[j]:
+                i -= 1
+                j += 1
+            return j-i-1
+
+        start, end = 0, 0
+        for i in range(len(s)):
+            len1 = expand(i, i)
+            len2 = expand(i, i+1)
+            maxlen = max(len1, len2)
+            if maxlen > end - start:
+                start = i - (maxlen-1)//2
+                end = i + maxlen//2
+        return s[start: end+1]
+```
+单词拆分-139
+
+奇葩dp
+```python
+class Solution:
+    def wordBreak(self, s: str, wordDict: List[str]) -> bool:
+        dp = [False]*(len(s)+1)
+        dp[0] = True
+        wordDict = set(wordDict)
+        maxvocab = 0
+        for word in wordDict:
+            maxvocab = max(maxvocab, len(word))
+        for i in range(1, len(s)+1):
+            for j in range(max(0, i-maxvocab), i):
+                if dp[j] and s[j: i] in wordDict:
+                    dp[i] = True
+        return dp[-1]
+```
+单词拆分2-140
+
+回溯+哈希表存储
+```python
+class Solution:
+    def wordBreak(self, s: str, wordDict: List[str]) -> List[str]:
+        store = {}
+        def word_break(start):
+            res = []
+            if start == len(s):
+                res.append("")
+
+            for end in range(start+1, len(s)+1):
+                if s[start: end] in wordDict:
+                    if end in store:
+                        tlist = store[end]
+                    else:
+                        tlist = word_break(end)
+                        store[end] = tlist
+                    for t in tlist:
+                        if t == "":
+                            res.append(s[start: end])
+                        else:
+                            res.append(s[start: end] + " " + t)
+                        # print(res)
+            return res
+        return word_break(0)
+```
