--- a/_posts/2020-07-20-面试题基础.md
+++ b/_posts/2020-07-20-面试题基础.md
@@ -12,10 +12,260 @@ tags:								#标签
 
 ### 编程
 - 实现kmeans、KNN
+```python
+"""
+其伪代码如下：
+
+创建k个点作为初始的质心点（随机选择）
+当任意一个点的簇分配结果发生改变时
+       对数据集中的每一个数据点
+              对每一个质心
+                     计算质心与数据点的距离
+              将数据点分配到距离最近的簇
+       对每一个簇，计算簇中所有点的均值，并将均值作为质心
+"""
+from numpy import *
+import time
+import matplotlib.pyplot as plt
+
+# calculate Euclidean distance
+def euclDistance(vector1, vector2):
+	return sqrt(sum(power(vector2 - vector1, 2)))
+ 
+# init centroids with random samples
+def initCentroids(dataSet, k):
+	numSamples, dim = dataSet.shape
+	centroids = zeros((k, dim))
+	for i in range(k):
+		index = int(random.uniform(0, numSamples))
+		centroids[i, :] = dataSet[index, :]
+	return centroids
+ 
+# k-means cluster
+def kmeans(dataSet, k):
+	numSamples = dataSet.shape[0]
+	# first column stores which cluster this sample belongs to,
+	# second column stores the error between this sample and its centroid
+    clusterAssment = mat(zeros((numSamples, 2)))
+	clusterChanged = True
+ 
+	## step 1: init centroids
+	centroids = initCentroids(dataSet, k)
+ 
+	while clusterChanged:
+		clusterChanged = False
+		## for each sample
+		for i in xrange(numSamples):
+			minDist  = 100000.0
+			minIndex = 0
+			## for each centroid
+			## step 2: find the centroid who is closest
+			for j in range(k):
+				distance = euclDistance(centroids[j, :], dataSet[i, :])
+				if distance < minDist:
+					minDist  = distance
+					minIndex = j
+			
+			## step 3: update its cluster
+			if clusterAssment[i, 0] != minIndex:
+				clusterChanged = True
+				clusterAssment[i, :] = minIndex, minDist**2
+ 
+		## step 4: update centroids
+		for j in range(k):
+			pointsInCluster = dataSet[nonzero(clusterAssment[:, 0].A == j)[0]]
+			centroids[j, :] = mean(pointsInCluster, axis = 0)
+ 
+	print 'Congratulations, cluster complete!'
+```
+
+```python
+"""
+一般情况下，kNN有如下流程：
+（1）收集数据：确定训练样本集合测试数据；
+（2）计算测试数据和训练样本集中每个样本数据的距离；(常用的距离计算公式：欧式距离公式 曼哈顿距离公式)
+（3）按照距离递增的顺序排序；
+（4）选取距离最近的k个点；
+（5）确定这k个点中分类信息的频率；
+（6）返回前k个点中出现频率最高的分类，作为当前测试数据的分类。
+"""
+
+from numpy import *
+import operator
+
+#定义KNN算法分类器函数
+#函数参数包括：(测试数据，训练数据，分类,k值)
+def classify(inX,dataSet, labels, k):
+    dataSetSize = dataSet.shape[0]
+    diffMat = tile(inX,(dataSetSize,1))-dataSet
+    sqDiffMat=diffMat**2
+    sqDistances=sqDiffMat.sum(axis=1)
+    distances=sqDistances**0.5 #计算欧式距离
+    sortedDistIndicies=distances.argsort() #排序并返回index
+    #选择距离最近的k个值
+    classCount={}
+    for i in range(k):
+        voteIlabel=labels[sortedDistIndicies[i]]
+        #D.get(k[,d]) -> D[k] if k in D, else d. d defaults to None.
+        classCount[voteIlabel]=classCount.get(voteIlabel,0)+1
+    #排序
+    sortedClassCount=sorted(classCount.items(),key=operator.itemgetter(1),reverse=True)
+    return sortedClassCount[0][0]
+
+#定义一个生成“训练样本集”的函数，包含特征和分类信息
+def createDataSet():
+    group=array([[1,1.1],[1,1],[0,0],[0,0.1]])
+    labels=['A','A','B','B']
+    return group,labels
+
+import KNN
+#生成训练样本
+group,labels=KNN.createDataSet()
+#对测试数据[0,0]进行KNN算法分类测试
+KNN.classify([0,0],group,labels,3)
+Out[3]: 'B'
+```
+
 - 从一个素数到另一个素数有几种方式？
+
 - 前缀树实现（精确、模糊匹配）
+```python
+trie树，又叫字典树，前缀树，单词查找树，键树，是一种多叉结构。
+
+性质：
+1. 根结点不包含字符，其他节点都包含字符
+2. 从根节点到某一个节点，路径上经过的字符连接起来，为该节点对应的字符串
+3. 每个节点的所有子节点包含的字符互不相同
+
+通常在实现的时候，会在节点结构中设置一个标志，用来标记该结点处是否构成一个单词（关键字）。
+
+两个有公共前缀的关键字，在Trie树中前缀部分的路径相同，所以Trie树又叫做前缀树（Prefix Tree）
+
+Trie树的核心思想是空间换时间，利用字符串的公共前缀来减少无谓的字符串比较以达到提高查询效率的目的。
+
+应用：字符串检索，词频统计，字符串排序，前缀匹配，辅助结构
+```
+```cpp
+#define ALPHABET_SIZE 26
+
+typedef struct trie_node
+{
+	int count;   // 记录该节点代表的单词的个数
+	trie_node *children[ALPHABET_SIZE]; // 各个子节点 
+}*trie;
+
+trie_node* create_trie_node()
+{
+	trie_node* pNode = new trie_node();
+	pNode->count = 0;
+	for(int i=0; i<ALPHABET_SIZE; ++i)
+		pNode->children[i] = NULL;
+	return pNode;
+}
+
+void trie_insert(trie root, char* key)
+{
+	trie_node* node = root;
+	char* p = key;
+	while(*p)
+	{
+		if(node->children[*p-'a'] == NULL)
+		{
+			node->children[*p-'a'] = create_trie_node();
+		}
+		node = node->children[*p-'a'];
+		++p;
+	}
+	node->count += 1;
+}
+/**
+ * 查询：不存在返回0，存在返回出现的次数
+ */ 
+int trie_search(trie root, char* key)
+{
+	trie_node* node = root;
+	char* p = key;
+	while(*p && node!=NULL)
+	{
+		node = node->children[*p-'a'];
+		++p;
+	}
+	
+	if(node == NULL)
+		return 0;
+	else
+		return node->count;
+}
+
+int main()
+{
+	// 关键字集合
+	char keys[][8] = {"the", "a", "there", "answer", "any", "by", "bye", "their"};
+	trie root = create_trie_node();
+
+	// 创建trie树
+	for(int i = 0; i < 8; i++)
+		trie_insert(root, keys[i]);
+
+	// 检索字符串
+	char s[][32] = {"Present in trie", "Not present in trie"};
+	printf("%s --- %s\n", "the", trie_search(root, "the")>0?s[0]:s[1]);
+
+	return 0;
+}
+```
+
+
 - 地图中找出大陆的个数（一道BFS题）
 - 二叉树最大深度
+```python
+# DFS
+class Solution:
+    def maxDepth(self, root: TreeNode) -> int:
+        if root is None:
+            return 0
+        return 1 + max(self.maxDepth(root.left), self.maxDepth(root.right))
+```
+```python
+# BFS
+class Solution:
+    def maxDepth(self, root: TreeNode) -> int:
+        if root is None:
+            return 0
+        from collections import deque
+
+        queue = deque()
+        queue.append(root)
+        depth = 0
+        while len(queue) > 0:
+            depth += 1
+            for _ in range(len(queue)):
+                node = queue.popleft()
+                if node.left is not None:
+                    queue.append(node.left)
+                if node.right is not None:
+                    queue.append(node.right)          
+        return depth
+```
+二叉树最小深度 注意细节
+```python
+class Solution:
+    def minDepth(self, root: TreeNode) -> int:
+        def dp(node):
+            if node is None:
+                return 0
+
+            left = dp(node.left)
+            right = dp(node.right)
+            if left == 0 and right == 0:
+                return 1
+            elif left == 0 or right == 0:
+                return left + right + 1
+            else:
+                return 1 + min(left, right)
+
+        return dp(root)
+```
 - 如何判断链表是否有环
 - topK小，第K大。怎么最快的找到一堆大数组里面第10大的数。n个数字的流（只能看一次），求前k大（O（N））
 
