--- a/_posts/2020-07-20-面试题基础.md
+++ b/_posts/2020-07-20-面试题基础.md
@@ -11,6 +11,30 @@ tags:								#标签
 ---
 
 ### 编程
+
+```python
+（1）Leetcode 3、5
+（2）leetcode 139
+（3）leetcode 140
+（4）leetcode 32
+（5）leetcode 20
+（6）leetcode 324 Wiggle Sort II
+（7）leetcode 448、121、123
+（8）leetcode 125、680
+（9）leetcode 153、154
+（10）最小编辑距离（动规、加权）
+（11）两个有序数组求交集
+（12）leetcode 1143 Longest Common Subsequence 最大公共子序列和最大公共子串（子序列可不连续，子串必须连续）
+（13）topK小，第K大。怎么最快的找到一堆大数组里面第10大的数。n个数字的流（只能看一次），求前k大（O（N））。
+（14）如何判断链表是否有环
+（15）二叉树最大深度
+（16）地图中找出大陆的个数（一道BFS题）
+
+leetcode 48 旋转图像 
+470 用rand7实现rand10
+剑指offer 顺时针打印矩阵
+200 463 695 岛屿数量/最大面积等岛屿问题
+```
 - 实现kmeans、KNN
 ```python
 """
