--- a/_posts/2020-07-20-面试题基础.md
+++ b/_posts/2020-07-20-面试题基础.md
@@ -295,6 +295,13 @@ class Solution:
 
 ### 数学相关
 - （1）贝叶斯计算概率？
+
+条件概率公式：P(A|B) = P(A AND B)/P(B)
+
+全概率公式：P(A) = P(A AND B1) + P(A AND B2) + ... + P(A AND Bk)
+                = P(A|B1)*P(B1) + ... + P(A|Bk)*P(Bk)
+
+贝叶斯公式： P(A|B) = P(B|A)*P(A)/P(B)
 - （2）25只兔子赛跑问题，共5个赛道，最少几次比赛可以选出前5名？
 - （3）100盏灯问题？
 - x, y服从0-1均匀分布，求x+y<1的概率？x, y, z服从0-1均匀分布，求x+y+z<1的概率？
