--- a/_posts/2020-05-31-leetcode解题记录.md
+++ b/_posts/2020-05-31-leetcode解题记录.md
@@ -84,6 +84,29 @@ class Solution:
                     D[i][j] = 1 + min(D[i-1][j], D[i][j-1], D[i-1][j-1])
                 
         return D[-1][-1]
+
+# 递归使用方法
+class Solution:
+    def minDistance(self, word1: str, word2: str) -> int:
+        store = {}
+
+        def dp(i, j):
+            if (i, j) in store:
+                return store[(i, j)]
+            if i == 0:
+                return j
+            if j == 0:
+                return i
+            if word1[i-1] == word2[j-1]:
+                t = min(dp(i-1, j-1)-1, dp(i-1, j), dp(i, j-1)) + 1
+                store[(i, j)] = t
+                return t
+            else:
+                t = min(dp(i-1, j-1), dp(i-1, j), dp(i, j-1)) + 1
+                store[(i, j)] = t
+                return t
+
+        return dp(len(word1), len(word2))
 ```
 
 #### 股票买卖问题
@@ -249,7 +272,7 @@ int BFS(Node start, Node target) {
 
 ### 二分搜索
 #### 常见的题目类型：
-二分查找 在排序数组中查找元素的第一个和最后一个位置
+二分查找 在排序数组中查找元素的第一个和最后一个位置 旋转数组找最小值（无重复和有重复）
 
 #### 关键点
 一般都是排序数组中操作的
@@ -312,6 +335,36 @@ int right_bound(int[] nums, int target) {
         return -1;
     return right;
 }
+```
+
+```python
+# 旋转数组找最小值（无重复和有重复）
+class Solution:
+    def findMin(self, nums: List[int]) -> int:
+        """
+        5 1 2 3 4
+        2 1
+        3 1 2
+        """
+        if len(nums) == 1:
+            return nums[0]
+        
+        l, r = 0, len(nums)-1
+
+        # sorted
+        if nums[r] > nums[0]:
+            return nums[0]
+
+        # not sorted
+        while l < r:
+            mid = (l+r)//2
+            if nums[mid] > nums[r]:
+                l = mid+1
+            elif nums[mid] < nums[r]:
+                r = mid
+            else:
+                r -= 1
+        return nums[l]
 ```
 
 ### 双指针
@@ -553,4 +606,96 @@ class Solution:
                         # print(res)
             return res
         return word_break(0)
+```
+
+### 岛屿相关问题
+
+可以视作对图的遍历，和二叉树的DFS和BFS类似，不过需要考虑更多的路径
+```python
+# 岛屿数量
+# DFS
+class Solution:
+    def numIslands(self, grid: List[List[str]]) -> int:
+        def DFS(x, y):
+            grid[x][y] = "0"
+            # down
+            if x+1 < len(grid) and grid[x+1][y] == "1":
+                DFS(x+1, y)
+            # right
+            if y+1 < len(grid[0]) and grid[x][y+1] == "1":
+                DFS(x, y+1)
+            # left
+            if y-1 > -1 and grid[x][y-1] == "1":
+                DFS(x, y-1)
+            # up
+            if x-1 > -1 and grid[x-1][y] == "1":
+                DFS(x-1, y)
+        
+        count = 0
+        for i in range(len(grid)):
+            for j in range(len(grid[0])):
+                if grid[i][j] == "1":
+                    count += 1
+                    DFS(i, j)
+        
+        return count
+
+# BFS
+class Solution:
+    def numIslands(self, grid: List[List[str]]) -> int:
+        from collections import deque
+        count = 0
+        queue = deque()
+        for i in range(len(grid)):
+            for j in range(len(grid[0])):
+                if grid[i][j] == "1":
+                    count += 1
+                    grid[i][j] == "0"
+                    queue.append((i, j))
+                    while len(queue) > 0:
+                        i_old, j_old = queue.popleft()
+                        for x, y in [(i_old-1, j_old), (i_old+1, j_old), (i_old, j_old-1), (i_old, j_old+1)]:
+                            if x > -1 and x < len(grid) and y > -1 and y < len(grid[0]) and grid[x][y] == "1":
+                                queue.append((x, y))
+                                grid[x][y] = "0"
+        return count
+```
+```python
+# 岛屿最大面积
+# 稍微变化一下
+class Solution:
+    def maxAreaOfIsland(self, grid: List[List[int]]) -> int:
+        maxspace = [0]
+        ret = 0
+        def DFS(x, y):
+            grid[x][y] = 0
+            # down
+            if x+1 < len(grid) and grid[x+1][y] == 1:
+                maxspace[0] += 1
+                DFS(x+1, y)
+            # right
+            if y+1 < len(grid[0]) and grid[x][y+1] == 1:
+                maxspace[0] += 1
+                DFS(x, y+1)
+            # left
+            if y-1 > -1 and grid[x][y-1] == 1:
+                maxspace[0] += 1
+                DFS(x, y-1)
+            # up
+            if x-1 > -1 and grid[x-1][y] == 1:
+                maxspace[0] += 1
+                DFS(x-1, y)
+
+        for i in range(len(grid)):
+            for j in range(len(grid[0])):
+                if grid[i][j] == 1:
+                    maxspace[0] += 1
+                    # print(maxspace)
+                    DFS(i, j)
+                    # print(maxspace)
+                    if maxspace[0] > ret:
+                        ret = maxspace[0]
+                    maxspace = [0]
+        
+        return ret
 ```
