--- a/_posts/2020-07-20-面试题基础.md
+++ b/_posts/2020-07-20-面试题基础.md
@@ -314,6 +314,15 @@ class Solution:
 ### 机器学习
 #### 基础
 - LR、SVM、最大熵、决策树
+```txt
+LR: logistic regression 逻辑回归
+Logistic Regression 虽然被称为回归，但其实际上是分类模型，并常用于二分类。Logistic Regression 因其简单、可并行化、可解释强深受工业界喜爱。
+Logistic 回归的本质是：假设数据服从这个分布，然后使用极大似然估计做参数的估计。
+具体：https://zhuanlan.zhihu.com/p/100763009
+https://zhuanlan.zhihu.com/p/27719875
+
+```
+
 - SVM原理，与感知机的区别
 - HMM 的假设？解决了什么问题？HMM中的矩阵意义？
 - CRF的假设是什么？解决了什么问题？CRF做特征工程？维特比算法
@@ -337,13 +346,125 @@ class Solution:
 ### 深度学习
 #### 基础
 - 常用loss函数、公式、适用场景，尤其交叉熵，高频考点
+```
+损失函数分为经验风险损失函数和结构风险损失函数。
+经验风险损失函数指预测结果和实际结果的差别，结构风险损失函数是指经验风险损失函数加上正则项。
+
+0-1损失函数(zero-one loss)
+0-1损失是指预测值和目标值不相等为1， 否则为0:
+(1)0-1损失函数直接对应分类判断错误的个数，但是它是一个非凸函数，不太适用.
+(2)感知机就是用的这种损失函数。但是相等这个条件太过严格，因此可以放宽条件，即满足
+
+绝对值损失函数
+绝对值损失函数是计算预测值与目标值的差的绝对值：
+
+log对数损失函数
+
+平方损失函数
+
+指数损失函数（exponential loss）
+对离群点、噪声非常敏感。经常用在AdaBoost算法中。
+
+Hinge 损失函数
+hinge损失函数表示如果被分类正确，损失为0，否则损失就为 [公式] 。SVM就是使用这个损失函数。
+使分类器可以更专注于整体的误差
+健壮性相对较高，对异常点、噪声不敏感，但它没太好的概率解释。
+
+交叉熵损失函数 (Cross-entropy loss function)
+loss = -1/n*sum(p(x)*logp(x))
+交叉熵是直接衡量两个分布，或者说两个model之间的差异。而似然函数则是解释以model的输出为参数的某分布模型对样本集的解释程度。因此，可以说这两者是“同貌不同源”，但是“殊途同归”啦。
+当使用sigmoid作为激活函数的时候，常用交叉熵损失函数而不用均方误差损失函数，因为它可以完美解决平方损失函数权重更新过慢的问题，具有“误差大的时候，权重更新快；误差小的时候，权重更新慢”的良好性质。
+
+对数损失函数和交叉熵损失函数应该是等价的
+
+1.交叉熵函数与最大似然函数的联系和区别？
+
+区别：交叉熵函数使用来描述模型预测值和真实值的差距大小，越大代表越不相近；似然函数的本质就是衡量在某个参数下，整体的估计和真实的情况一样的概率，越大代表越相近。
+
+联系：交叉熵函数可以由最大似然函数在伯努利分布的条件下推导出来，或者说最小化交叉熵函数的本质就是对数似然函数的最大化。
+
+2. 在用sigmoid作为激活函数的时候，为什么要用交叉熵损失函数，而不用均方误差损失函数？
+因为sigmoid的性质，求导的时候大部分情况会很小，导致更新缓慢。
+
+```
 - 梯度消失和梯度爆炸 产生原因？如何解决？
+```
+梯度消失和梯度爆炸其实是一个问题。当网络较深，且采用了不恰当的激活函数，容易出现这种问题。靠近输入层一般问题比较大，因为反向传播从后向前。
+采用不合适的激活函数更可能导致梯度消失，权重初始值过大更可能导致梯度爆炸。
+解决方案：
+梯度剪裁（clip grad）
+权重正则化（weight decay（l2惩罚），pytorch里adam自带正则化）
+正则化是通过对网络权重做正则限制过拟合
+使用relu等其它激活函数
+
+batchnorm！！！！这是个很重要的创举：
+Batchnorm是深度学习发展以来提出的最重要的成果之一了，目前已经被广泛的应用到了各大网络中，具有加速网络收敛速度，提升训练稳定性的效果，Batchnorm本质上是解决反向传播过程中的梯度问题。batchnorm全名是batch normalization，简称BN，即批规范化，通过规范化操作将输出信号x规范化到均值为0，方差为1保证网络的稳定性。
+具体来说就是反向传播中，经过每一层的梯度会乘以该层的权重（手动推导一下就知道了）反向传播式子中有w的存在，所以w的大小影响了梯度的消失和爆炸，batchnorm就是通过对每一层的输出做scale和shift的方法，通过一定的规范化手段，把每层神经网络任意神经元这个输入值的分布强行拉回到接近均值为0方差为1的标准正太分布，即严重偏离的分布强制拉回比较标准的分布，这样使得激活输入值落在非线性函数对输入比较敏感的区域，这样输入的小变化就会导致损失函数较大的变化，使得让梯度变大，避免梯度消失问题产生，而且梯度变大意味着学习收敛速度快，能大大加快训练速度。
+
+残差结构
+LSTM本身机制也可以避免梯度消失
+上面说的几个transformer中用到的是：梯度剪裁，权重l2正则化（loss中），relu，batchnorm,残差结构
+```
+
 - 过拟合 产生原因？解决方法
+```
+过拟合的主要原因就是数据太少+模型太复杂
+模型在训练集上表现很好，但是在验证集上却不能保持准确，也就是模型泛化能力很差。这种情况很可能是模型过拟合。
+造成原因主要有以下几种：
+(1)、训练数据集样本单一，样本不足。如果训练样本只有负样本，然后那生成的模型去预测正样本，这肯定预测不准。所以训练样本要尽可能的全面，覆盖所有的数据类型。
+(2)、训练数据中噪声干扰过大。噪声指训练数据中的干扰数据。过多的干扰会导致记录了很多噪声特征，忽略了真实输入和输出之间的关系。
+(3)、模型过于复杂。模型太复杂，已经能够死记硬背记录下了训练数据的信息，但是遇到没有见过的数据的时候不能够变通，泛化能力太差。我们希望模型对不同的模型都有稳定的输出。模型太复杂是过拟合的重要因素。
+
+针对过拟合的上述原因，对应的预防和解决办法如下：
+(1)、在训练和建立模型的时候，从相对简单的模型开始，不要一开始就把特征做的非常多，模型参数跳的非常复杂。
+(2)、增加样本，要覆盖全部的数据类型。数据经过清洗之后再进行模型训练，防止噪声数据干扰模型。
+(3)、正则化。在模型算法中添加惩罚函数来防止过拟合。常见的有L1，L2正则化。
+(4)、集成学习方法bagging(如随机森林）能有效防止过拟合
+(5)、减少特征个数(不是太推荐）
+```
 - 正向传播和反向传播
+```
+
+```
 - dropout的作用
+```
+Dropout说的简单一点就是：我们在前向传播的时候，让某个神经元的激活值以一定的概率p停止工作，这样可以使模型泛化性更强，因为它不会太依赖某些局部的特征，如图1所示。
+
+Dropout可以被认为是集成大量深层神经网络的实用的Bagging方法，减少模型复杂度，提高泛化能力。
+使得了在丢失某些特定信息的情况下依然可以从其它信息中学到一些模式(鲁棒性)，迫使网络去学习更加鲁棒的特征（更加具有通适性）。
+```
 - L1、L2范数数学公式，及它们的作用
+```
+L1范数: 为x向量各个元素绝对值之和。 L2范数: 为x向量各个元素平方和的1/2次方，L2范数又称Euclidean范数或者Frobenius范数 Lp范数: 为x向量各个元素绝对值p次方和的1/p次方.
+
+L1范数可以使权值稀疏，方便特征提取。 L2范数可以防止过拟合，提升模型的泛化能力。
+看导数一个是1一个是w便知, 在靠进零附近, L1以匀速下降到零, 而L2则完全停下来了. 这说明L1是将不重要的特征(或者说, 重要性不在一个数量级上)尽快剔除, L2则是把特征贡献尽量压缩最小但不至于为零. 两者一起作用, 就是把重要性在一个数量级(重要性最高的)的那些特征一起平等共事(简言之, 不养闲人也不要超人)。
+```
 - 常见激活函数及优缺点 sigmoid, tanh, ReLU
+```
+https://zhuanlan.zhihu.com/p/30510596
+
+sigmoid：f(x)=1/(1+e^-x)
+当x在-3到3之间，梯度比较大，但是其它范围内则很小。
+同时这个激活函数y都是大于0的
+
+tanh：tanh(x)=2/(1+e^(-2x))-1
+现在原点对称了，解决了sigmoid的这个问题。
+但是同样，一定范围内梯度更陡了，其它地方过于平坦
+
+relu(x)=max(0,x)
+relu的优点是非线性，较为稀疏，计算高效；缺点是容易产生死神经元
+由此产生变体leaky relu： f(x)=ax if x<0 | x if x>0
+
+softmax:也是一种sigmoid函数，在处理分类任务很好用；不同之处在于softmax可以处理很多个类的情况。一般用在分类器的输出层。
+
+gelu（高斯误差线性单元激活函数）
+用在了bert和gpt中
+```
 - SoftMax + CrossEntropy的反向梯度求导
+```
+
+```
 - 怎么解决beam-search局部最优问题？global embedding 怎么做？
 - sgd与adam的区别
 
