--- a/_posts/2020-05-31-leetcode解题记录.md
+++ b/_posts/2020-05-31-leetcode解题记录.md
@@ -230,6 +230,34 @@ def backtrack(路径, 选择列表):
         撤销选择
 ```
 
+```python
+# 给定一个无重复元素的数组 candidates 和一个目标数 target ，找出 candidates 中所有可以使数字和为 target 的组合。
+class Solution:
+    def combinationSum(self, candidates: List[int], target: int) -> List[List[int]]:
+        import copy
+        ret = []
+        def backtrack(done, tsum, tidx):
+            # print(done, tsum, tidx)
+            if tsum == target:
+                ret.append(copy.copy(done))
+                return
+            if tsum > target:
+                return
+            
+            for i in range(tidx, len(candidates)):
+                done.append(candidates[i])
+                tsum += candidates[i]
+                tidx = i
+                backtrack(done, tsum, tidx)
+                done.pop()
+                tsum -= candidates[i]
+        
+        done = []
+        backtrack(done, 0, 0)
+
+        return ret
+```
+
 ### BFS广度优先搜索
 #### 常见的题目类型：
 二叉树最小深度 打开转盘锁
